--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <link rel="stylesheet" href="css/homepage.css">
     <link rel="stylesheet" href="css/todoList.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/calender.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     
-
 </head>
 <body>
     <div class="root">
+    <div class="roots">
+
+        
         <div class="container">
             <button class="side-bar-button">
                 <img width="17" height="17" src="https://img.icons8.com/external-anggara-glyph-anggara-putra/32/external-application-user-interface-basic-anggara-glyph-anggara-putra.png" alt="external-application-user-interface-basic-anggara-glyph-anggara-putra"/>
@@ -29,8 +32,14 @@
                 </ul>
             </aside>
             <main class="main-container">
-                <div class="home-page-container ">
+                <div class="home-page-container">
                     <h1>logo</h1>
+                    <div class="calender-box">
+                        <table class="calender-table">
+                            <div class="calender-head">
+                            </div>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="todoList-page-container invisible">
@@ -72,11 +81,13 @@
             </div>
         </div>
     </div>
+    </div>
 
     <script src="js/sidebar.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/utills.js"></script>
     <script src="js/todolist.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/calender.js"></script>
 </body>
 </html>
